--- a/part3_hm.ipynb
+++ b/part3_hm.ipynb
@@ -1299,7 +1299,7 @@
     "normalized_user_feature = user_feature.div(user_feature.sum(axis=1), axis=0)\n",
     "normalized_user_feature.insert(0, 'customer_id', cutomer_ids)\n",
     "normalized_user_feature = normalized_user_feature.set_index('customer_id')\n",
-    "normalized_user_feature"
+    "normalized_user_feature.head(1)"
    ]
   },
   {
@@ -1844,7 +1844,7 @@
     "item_feature = dummies_df.drop_duplicates(subset='article_id')\n",
     "item_feature = item_feature[item_feature.article_id.isin(article_ids)].drop('customer_id', axis=1)\n",
     "item_feature = item_feature.set_index('article_id')\n",
-    "item_feature"
+    "item_feature.head(1)"
    ]
   },
   {
