--- a/part1_hm.ipynb
+++ b/part1_hm.ipynb
@@ -21,12 +21,11 @@
     "3. Data Import and Cleaning\n",
     "\n",
     "### [Part 2](part2_hm.ipynb)\n",
-    "4. [Exploratory Data Analysis](#4.-EDA)\n",
+    "4.  Exploratory Data Analysis\n",
     "\n",
     "### [Part 3](part3_hm.ipynb)\n",
-    "5.  [User-Item Matrix](#5.-User-item Matrix)\n",
-    "6.  [Challenges](#6.-Challenges)\n",
-    "7.  [Conclusion](#7.-Conclusion)\n"
+    "5.  User-Item Matrix\n",
+    "\n"
    ]
   },
   {
