--- a/part2_hm.ipynb
+++ b/part2_hm.ipynb
@@ -10,7 +10,7 @@
     "<img src='http://imgur.com/1ZcRyrc.png' style='float: left; margin: 20px; height: 55px'>\n",
     "\n",
     "# Capstone Project: H & M Recommender System\n",
-    "## Part 2 - EDA\n",
+    "## Part 2 - EDA <a id='EDA'></a>\n",
     "---\n",
     "## Contents\n",
     "---\n",
@@ -21,12 +21,11 @@
     "3. Data Import and Cleaning\n",
     "\n",
     "### [Part 2](part2_hm.ipynb)\n",
-    "4. [Exploratory Data Analysis](#4.-EDA)\n",
+    "4.  Exploratory Data Analysis\n",
     "\n",
     "### [Part 3](part3_hm.ipynb)\n",
-    "5.  [User-Item Matrix](#5.-User-item Matrix)\n",
-    "6.  [Challenges](#6.-Challenges)\n",
-    "7.  [Conclusion](#7.-Conclusion)\n"
+    "5.  User-Item Matrix\n",
+    "\n"
    ]
   },
   {
@@ -206,10 +205,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "08c219a7-dc72-433b-b0c2-cff9508c0a3c",
+   "metadata": {},
+   "source": [
+    "# 4 EDA\n",
+    "<a id='EDA'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5a12fd27-7a2e-4556-82b6-b8bfef665116",
    "metadata": {},
    "source": [
-    "## 2.1 Analysis of articles data"
+    "## 4.1 Analysis of articles data"
    ]
   },
   {
@@ -903,7 +911,7 @@
    "id": "61a6323c-9ec7-4c8d-8921-36ebe2a211ee",
    "metadata": {},
    "source": [
-    "## 2.2 Analysis of Customers data"
+    "## 4.2 Analysis of Customers data"
    ]
   },
   {
@@ -1549,7 +1557,7 @@
    "id": "e97a4d58-d42f-478b-a92b-67df1e6e53a0",
    "metadata": {},
    "source": [
-    "### Transactions"
+    "### 4.3 Analysis of Transactions data"
    ]
   },
   {
