--- a/part3_hm.ipynb
+++ b/part3_hm.ipynb
@@ -21,12 +21,11 @@
     "3. Data Import and Cleaning\n",
     "\n",
     "### [Part 2](part2_hm.ipynb)\n",
-    "4. [Exploratory Data Analysis](#4.-EDA)\n",
+    "4.  Exploratory Data Analysis\n",
     "\n",
     "### [Part 3](part3_hm.ipynb)\n",
-    "5.  [User-Item Matrix](#5.-User-item Matrix)\n",
-    "6.  [Challenges](#6.-Challenges)\n",
-    "7.  [Conclusion](#7.-Conclusion)\n"
+    "\n",
+    "5.  User-Item Matrix\n"
    ]
   },
   {
@@ -2476,16 +2475,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "a1b50cd0-a22d-4e0d-bbcb-59b2fbd072db",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'scores' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# getting recommendation and previous items\u001b[39;00m\n\u001b[0;32m      2\u001b[0m k \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m6\u001b[39m\n\u001b[1;32m----> 3\u001b[0m customer_id \u001b[38;5;241m=\u001b[39m scores\u001b[38;5;241m.\u001b[39mindex[\u001b[38;5;241m9\u001b[39m]\n\u001b[0;32m      4\u001b[0m rcmnds, prev_items \u001b[38;5;241m=\u001b[39m get_rcmnd(customer_id, scores)\n\u001b[0;32m      5\u001b[0m rcmnds_pca, prev_items \u001b[38;5;241m=\u001b[39m get_rcmnd(customer_id, scores_pca)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'scores' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# getting recommendation and previous items\n",
     "k = 6\n",
-    "customer_id = scores.index[1]\n",
+    "customer_id = scores.index[9]\n",
     "rcmnds, prev_items = get_rcmnd(customer_id, scores)\n",
     "rcmnds_pca, prev_items = get_rcmnd(customer_id, scores_pca)\n",
     "rcmnds = rcmnds.index.values[:k]\n",
